Fixes issue where edit form wasnt readable due to font color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,17 @@ color: white
 
 }
 
+.field{
+  color: black
+}
+
+p.white{
+color: white
+}
+
+p.black{
+  color: black
+}
 
 body {
 -webkit-background-size: cover;
